--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
+        "laraveldaily/laravel-invoices": "^3.1",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.7",
         "yajra/laravel-datatables": "^1.5"
