implemented payment fix,htm reciept and bed resaasignment

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BED_SERVICE_CATGORY_ID=3
+INVESTGATION_CATEGORY_ID=2
+CONSULTATION_CATEGORY_ID=1
+NUSRING_SERVICE_CATEGORY=4
+MISC_SERVICE_CATEGORY_ID=5
