implemented conttinuing consultation and minor fixes

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,5 @@ INVESTGATION_CATEGORY_ID=2
 CONSULTATION_CATEGORY_ID=1
 NUSRING_SERVICE_CATEGORY=4
 MISC_SERVICE_CATEGORY_ID=5
+
+CONSULTATION_CYCLE_DURATION=24
