added dhis config in eve

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,18 @@ CONSULTATION_CYCLE_DURATION=24
 
 CLIENT_ID="123"
 CLIENT_SECRET="123"
+
+DHIS_API_URL="http://localhost:8080/api"#noTrailingSlash
+DHIS_ORG_UNIT="Rp268JB6Ne4"
+DHIS_TRACKED_ENTITY_PROGRAM="R4k4JrsNn3M"
+DHIS_TRACKED_ENTITY_PROGRAM_STAGE1="LH98MrAcWs9"#fistVisit
+DHIS_TRACKED_ENTITY_PROGRAM_STAGE2="kLcvsaaoJku"#followUP
+DHIS_TRACKED_ENTITY_PROGRAM_EVENT_DATAELEMENT="nZCumwgwlgf"#dataelement for event, i.e reason for encounter
+DHIS_USERNAME="admin"
+DHIS_PASS="district"
+DHIS_TRACKED_ENTITY_TYPE="nEenWmSyUEp"
+DHIS_TRACKED_ENTITY_ATTR1="w75KJ2mc4zz"#fistname
+DHIS_TRACKED_ENTITY_ATTR2="zDhUuAYrxNC"#lastname
+DHIS_TRACKED_ENTITY_ATTR3="w75KJ2mc4zz"#gender
+DHIS_TRACKED_ENTITY_ATTR4="w75KJ2mc4zz"#dob
+DHIS_TRACKED_ENTITY_ATTR5="w75KJ2mc4zz"#city
