Added more DHIS attributes

--- a/.env.example
+++ b/.env.example
@@ -71,8 +71,8 @@ DHIS_TRACKED_ENTITY_PROGRAM_EVENT_DATAELEMENT="nZCumwgwlgf"#dataelement for even
 DHIS_USERNAME="admin"
 DHIS_PASS="district"
 DHIS_TRACKED_ENTITY_TYPE="nEenWmSyUEp"
-DHIS_TRACKED_ENTITY_ATTR1="w75KJ2mc4zz"#fistname
-DHIS_TRACKED_ENTITY_ATTR2="zDhUuAYrxNC"#lastname
-DHIS_TRACKED_ENTITY_ATTR3="w75KJ2mc4zz"#gender
-DHIS_TRACKED_ENTITY_ATTR4="w75KJ2mc4zz"#dob
-DHIS_TRACKED_ENTITY_ATTR5="w75KJ2mc4zz"#city
+DHIS_TRACKED_ENTITY_ATTR_FNAME="w75KJ2mc4zz"#fistname
+DHIS_TRACKED_ENTITY_ATTR_LNAME="zDhUuAYrxNC"#lastname
+DHIS_TRACKED_ENTITY_ATTR_GENDER="cejWyOfXge6"#gender
+DHIS_TRACKED_ENTITY_ATTR_DOB="gHGyrwKPzej"#dob
+DHIS_TRACKED_ENTITY_ATTR_CITY="FO4sWYJ64LQ"#city
