added super admin cred to env example

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,7 @@ DHIS_TRACKED_ENTITY_ATTR_LNAME="zDhUuAYrxNC"#lastname
 DHIS_TRACKED_ENTITY_ATTR_GENDER="cejWyOfXge6"#gender
 DHIS_TRACKED_ENTITY_ATTR_DOB="gHGyrwKPzej"#dob
 DHIS_TRACKED_ENTITY_ATTR_CITY="FO4sWYJ64LQ"#city
+
+COREHMS_SUPERADMIN_URL="https://corehms.com/api"
+COREHMS_SUPERADMIN_USERNAME="CoreHMSAdmin"
+COREHMS_SUPERADMIN_PASS="123!@#$"
