--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,5 @@ DHIS_TRACKED_ENTITY_ATTR_CITY="FO4sWYJ64LQ"#city
 COREHMS_SUPERADMIN_URL="https://corehms.com/api"
 COREHMS_SUPERADMIN_USERNAME="CoreHMSAdmin"
 COREHMS_SUPERADMIN_PASS="123!@#$"
+
+GOONLINE=0 #if you want the instance to enroll patient on dhis
