implemented optional twak to and diagnosis req

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,7 @@ COREHMS_SUPERADMIN_USERNAME="CoreHMSAdmin"
 COREHMS_SUPERADMIN_PASS="123!@#$"
 
 GOONLINE=0 #if you want the instance to enroll patient on dhis
+REQUIREDIAGNOSIS=0 #if you want the instance to ask for reason for encounter during consultaion
+ENABLE_TWAKTO=0 #if you wan to enable the rwak to support btn
+
+
