implemetd new charting

--- a/.env.example
+++ b/.env.example
@@ -88,4 +88,6 @@ ENABLE_TWAKTO=0 #if you wan to enable the rwak to support btn
 
 SESSION_LIFETIME=2440
 
+NOTE_EDIT_WINDOW=3600 #in minues, how log after a note can it be edited
+
 
