updated .env example with git

--- a/.env.example
+++ b/.env.example
@@ -90,4 +90,6 @@ SESSION_LIFETIME=2440
 
 NOTE_EDIT_WINDOW=3600 #in minues, how log after a note can it be edited
 
+GIT="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"
+
 
