--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
         "laraveldaily/laravel-invoices": "^3.1",
+        "owen-it/laravel-auditing": "^13.7",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.7",
         "yajra/laravel-datatables": "^1.5"
